--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
 	</head>
 	<body>
 		<header>
-			<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+			<nav class="navbar navbar-expand-lg navbar-dark bg-dark nav">
 				<a class="navbar-brand" href="#">E-commerce</a>
 				<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
     			<span class="navbar-toggler-icon"></span>
   				</button>
   				<div class="collapse navbar-collapse" id="navbarTogglerDemo01">
-  					<ul class="navbar-nav ml-auto mt-2 mt-lg-0">
+  					<ul class="navbar-nav ml-auto mt-lg-0">
 						<li class="nav-item">
 							<a class="nav-link" href="#"><i class="fa fa-shopping-cart"></i> Canasta</a></span>
 						</li>
@@ -27,6 +27,23 @@
   				</div>	
 			</nav>	
 		</header>
+		<section>
+			<div class="container">
+				<div class="row mt-4">
+					<div class="col-12 col-md-3 search"></div>
+					<div class="col-12 col-md-9">
+						<div class="slider"></div>
+						<div class="container products">
+							<div class="row mt-4">
+								<div class="col-6 col-md-4  product1"></div>
+								<div class="col-6 col-md-4  product2"></div>
+								<div class="col-6 col-md-4  product3"></div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</section>
 				
 	</body>	
 	<!--jquery Hosted-->
