--- a/index.html
+++ b/index.html
@@ -32,12 +32,37 @@
 				<div class="row mt-4">
 					<div class="col-12 col-md-3 search"></div>
 					<div class="col-12 col-md-9">
-						<div class="slider"></div>
-						<div class="container products">
+						<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+							<ol class="carousel-indicators">
+								<li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+								<li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+								<li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+							</ol>
+							<div class="carousel-inner" role="listbox">
+								<div class="carousel-item active">
+									<img class="d-block img-fluid" src="css/images/slider/banner-slider-1.jpg" alt="Slider1">
+								</div>
+								<div class="carousel-item">
+									<img class="d-block img-fluid" src="css/images/slider/banner-slider-2.jpg" alt="Slider2">
+								</div>
+								<div class="carousel-item">
+									<img class="d-block img-fluid" src="css/images/slider/banner-slider-3.jpg" alt="Slider2">
+								</div>
+							</div>
+							<a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+								<span class="carousel-control-prev-icon" aria-hidden="true"></span>
+								<span class="sr-only">Previus</span>	
+							</a>
+							<a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+								<span class="carousel-control-next-icon" aria-hidden="true"></span>
+								<span class="sr-only">Next</span>	
+							</a>
+						</div>
+						<div class="container">
 							<div class="row mt-4">
-								<div class="col-6 col-md-4  product1"></div>
-								<div class="col-6 col-md-4  product2"></div>
-								<div class="col-6 col-md-4  product3"></div>
+								<div class="col-6 col-md-4 product"></div>
+								<div class="col-6 col-md-4 product"></div>
+								<div class="col-6 col-md-4 product"></div>
 							</div>
 						</div>
 					</div>
