Add Carrousel and Search bar

--- a/index.html
+++ b/index.html
@@ -30,7 +30,17 @@
 		<section>
 			<div class="container">
 				<div class="row mt-4">
-					<div class="col-12 col-md-3 search"></div>
+					<div class="col-12 col-md-3 search">
+						<div class="form-group">
+							<div class="input-group">
+								<input type="text" class="form-control" placeholder="Buscar camisetas">
+								<div class="input-group-addon">
+									<i class="fa fa-search"></i>
+								</div>
+							</div>
+						</div>
+					<h5>Categorías</h5>	
+					</div>
 					<div class="col-12 col-md-9">
 						<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
 							<ol class="carousel-indicators">
