--- a/index.html
+++ b/index.html
@@ -39,7 +39,45 @@
 								</div>
 							</div>
 						</div>
-					<h5>Categorías</h5>	
+					<h5>Categorías</h5>
+					<ul class="list-group">
+						<li class="list-group-item justify-content-between list-group-item-action active">
+							Todos
+							<span class="badge badge-default float-right">140</span>
+						</li>
+						<li class="list-group-item justify-content-between">
+							Hombre
+							<span class="badge badge-info float-right">20</span>
+						</li>
+						<li class="list-group-item justify-content-between">
+							Mujer
+							<span class="badge badge-info float-right">20</span>
+						</li>
+						<li class="list-group-item justify-content-between">
+							Hipster
+							<span class="badge badge-info float-right">40</span>
+						</li>
+						<li class="list-group-item justify-content-between">
+							Metal
+							<span class="badge badge-info float-right">20</span>
+						</li>
+						<li class="list-group-item justify-content-between">
+							Universidad
+							<span class="badge badge-info float-right">10</span>
+						</li>
+						<li class="list-group-item justify-content-between">
+							Deportiva
+							<span class="badge badge-info float-right">10</span>
+						</li>
+						<li class="list-group-item justify-content-between">
+							Rayas
+							<span class="badge badge-info float-right">10</span>
+						</li>
+						<li class="list-group-item justify-content-between">
+							Apretada
+							<span class="badge badge-info float-right">10</span>
+						</li>
+					</ul>	
 					</div>
 					<div class="col-12 col-md-9">
 						<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
@@ -79,7 +117,6 @@
 				</div>
 			</div>
 		</section>
-				
 	</body>	
 	<!--jquery Hosted-->
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
