Add Products for E-commerce

--- a/index.html
+++ b/index.html
@@ -27,10 +27,11 @@
   				</div>	
 			</nav>	
 		</header>
+
 		<section>
 			<div class="container">
 				<div class="row mt-4">
-					<div class="col-12 col-md-3 search">
+					<div class="col-12 col-md-3">
 						<div class="form-group">
 							<div class="input-group">
 								<input type="text" class="form-control" placeholder="Buscar camisetas">
@@ -40,7 +41,7 @@
 							</div>
 						</div>
 					<h5>Categorías</h5>
-					<ul class="list-group">
+					<ul class="list-group hidden-md-down">
 						<li class="list-group-item justify-content-between list-group-item-action active">
 							Todos
 							<span class="badge badge-default float-right">140</span>
@@ -79,6 +80,7 @@
 						</li>
 					</ul>	
 					</div>
+
 					<div class="col-12 col-md-9">
 						<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
 							<ol class="carousel-indicators">
@@ -106,11 +108,57 @@
 								<span class="sr-only">Next</span>	
 							</a>
 						</div>
+
 						<div class="container">
 							<div class="row mt-4">
-								<div class="col-6 col-md-4 product"></div>
-								<div class="col-6 col-md-4 product"></div>
-								<div class="col-6 col-md-4 product"></div>
+								<div class="card-columns hidden-lg-down">
+									<div class="card">
+										<img class="card-img-top" src="css/images/products/camiseta-1.jpg" alt="Hipster Ultimate">
+										<div class="card-body">
+											<h4 class="card-title">Hipster Ultimate</h4>
+											<p class="card-text">La camiseta ideal para hipsters</p>
+											<a href="#" class="btn btn-primary"><i class="fa fa-cart-plus" aria-hidden="true"></i> $229</a>
+											<a href="#modal" class="btn btn-secondary"><i class="fa fa-arrows-alt"></i> Detalles</a>
+										</div>
+									</div>
+									<div class="card">
+										<img class="card-img-top" src="css/images/products/camiseta-2.jpg" alt="On Motion Love">
+										<div class="card-body">
+											<h4 class="card-title">On Motion Love</h4>
+											<p class="card-text">Perfecta para salidas rocossas.</p>
+											<a href="#" class="btn btn-primary"><i class="fa fa-cart-plus" aria-hidden="true"></i> $229</a>
+											<a href="#modal" class="btn btn-secondary"><i class="fa fa-arrows-alt"></i> Detalles</a>
+										</div>
+									</div>
+									<div class="card">
+										<img class="card-img-top" src="css/images/products/camiseta-3.jpg" alt="Underground Max">
+										<div class="card-body">
+											<h4 class="card-title">Underground Max</h4>
+											<p class="card-text">Ideal para Underground</p>
+											<a href="#" class="btn btn-primary"><i class="fa fa-cart-plus" aria-hidden="true"></i> $229</a>
+											<a href="#modal" class="btn btn-secondary"><i class="fa fa-arrows-alt"></i> Detalles</a>
+										</div>
+									</div>
+									<div class="card">
+										<img class="card-img-top" src="css/images/products/camiseta-4.jpg" alt="Flame">
+										<div class="card-body">
+											<h4 class="card-title">Flame</h4>
+											<p class="card-text">Ideal para fiestas.</p>
+											<a href="#" class="btn btn-primary"><i class="fa fa-cart-plus" aria-hidden="true"></i> $229</a>
+											<a href="#modal" class="btn btn-secondary"><i class="fa fa-arrows-alt"></i> Detalles</a>
+										</div>
+									</div>
+									<div class="card">
+										<img class="card-img-top" src="css/images/products/camiseta-5.jpg" alt="Flame Black">
+										<div class="card-body">
+											<h4 class="card-title">Flame Black</h4>
+											<p class="card-text">Ideal para citas.</p>
+											<a href="#" class="btn btn-primary"><i class="fa fa-cart-plus" aria-hidden="true"></i> $229</a>
+											<a href="#modal" class="btn btn-secondary"><i class="fa fa-arrows-alt"></i> Detalles</a>
+										</div>
+									</div>
+
+								</div>
 							</div>
 						</div>
 					</div>
